@@ -1,3 +1,8 @@
+2003-06-24  Donal K. Fellows  <fellowsd@cs.man.ac.uk>
+
+	* generic/tclHash.c (Tcl_HashStats): Prevented occurrence of
+	division-by-zero problems.  [Bug 759749]
+
 2003-06-24  Mo DeJong  <mdejong@users.sourceforge.net>
 
 	* unix/tclUnixPort.h: #undef inet_ntoa before
